--- a/index.html
+++ b/index.html
@@ -11,14 +11,49 @@
 <body>
     <main class="cartao">
         <div class="minhas-informacoes">
-
+            <img src="./src/imagens/foto.png" alt="Foto Perfil">
+            <h1 class="nome">Oséias Nogueira</h1>
+            <h2 class="cargo">Desenvolvedor Front-end Jr</h2>
         </div>
         <div class="conteudo">
             <ul class="abas">
+                <li class="aba">
+                    <img src="./src/imagens/sobre2.gif" alt="ícone sobre">
+                </li>
+                <li class="aba">
+                    <img src="./src/imagens/redes2.gif" alt="ícone de redes sociais">
+                </li>
+                <li class="aba">
+                    <img src="./src/imagens/projetos2.webp" alt="ícone de redes sociais">
+                </li>
 
             </ul>
             <div class="informacoes-abas">
-                
+                <div>
+                    <h3>Sobre</h3>
+                    <div>
+                        <p>Olá meu nome é Oséias e estou migrando para a área de Desenvolvimento Frontend.</p>
+                        <p>Busco me aperfeiçoar e atingir o topo da carreira. Acredito na tecnologia e seus benefícios para o mundo, quero fazer parte disso.</p> 
+                        
+                        <p>Atualmente estou estudando <span>HTML, CSS e JavaScript.</span>.</p>
+                    </div>
+                </div>
+
+                <div>
+                    <h3>Minhas Redes</h3>
+                    <li>
+                        <a href="https://drive.google.com/file/d/1GUXms_ibemiVhbp6STCrSF49GnmMaX6G/view?usp=sharing" target="_blank">Currículo</a>
+                    </li>
+                    <li></li>
+                    <li></li>
+                </div>
+
+                <div>
+                    <h3>Projetos</h3>
+                    <li></li>
+                    <li></li>
+                </div>
+
             </div>
         </div>
     </main>
