Adição de classes para identificação CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfólio</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,9 +29,9 @@
 
             </ul>
             <div class="informacoes-abas">
-                <div>
-                    <h3>Sobre</h3>
-                    <div>
+                <div class="informacao">
+                    <h3 class="sub-titulo">Sobre</h3>
+                    <div class="descricao">
                         <p>Olá meu nome é Oséias e estou migrando para a área de Desenvolvimento Frontend.</p>
                         <p>Busco me aperfeiçoar e atingir o topo da carreira. Acredito na tecnologia e seus benefícios para o mundo, quero fazer parte disso.</p> 
                         
@@ -39,19 +39,31 @@
                     </div>
                 </div>
 
-                <div>
-                    <h3>Minhas Redes</h3>
-                    <li>
-                        <a href="https://drive.google.com/file/d/1GUXms_ibemiVhbp6STCrSF49GnmMaX6G/view?usp=sharing" target="_blank">Currículo</a>
-                    </li>
-                    <li></li>
-                    <li></li>
+                <div class="informacao">
+                    <h3 class="sub-titulo">Minhas Redes</h3>
+                    <ul class="redes-sociais">
+                        <li>
+                            <a href="https://drive.google.com/file/d/1GUXms_ibemiVhbp6STCrSF49GnmMaX6G/view?usp=sharing" target="_blank" class="curriculo">Currículo</a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/oséias-nogueira-46a072a5/" target="_blank" class="linkedin">LinkdIn</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/oseiasWeb" target="_blank" class="github">GitHub</a>
+                        </li>
+                    </ul>
                 </div>
 
-                <div>
-                    <h3>Projetos</h3>
-                    <li></li>
-                    <li></li>
+                <div class="informacao">
+                    <h3 class="sub-titulo">Projetos</h3>
+                    <ul class="lista-projetos">
+                        <li>
+                            <a href="https://oseiasweb.github.io/lista-de-tarefas/" target="_blank" class="projeto1">Projeto 1 - Lista de tarefas</a>
+                        </li>
+                        <li>
+                            <a href="https://oseiasweb.github.io/projeto-marvel/" target="_blank" class="projeto2">Projeto 2 - Seleção de Personagens</a>
+                        </li>
+                    </ul>
                 </div>
 
             </div>
