--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital@1&display=swap" rel="stylesheet">
 
-    <title>Portfólio</title>
-
+    <link rel="stylesheet" href="src/CSS/reset.css">
     <link rel="stylesheet" href="src/CSS/style.css">
+
+    <title>Portfólio</title>
 </head>
 <body>
     <main class="cartao">
         <div class="minhas-informacoes">
             <img src="./src/imagens/foto.png" alt="Foto Perfil">
-            <h1 class="nome">Oséias Nogueira</h1>
+            <h1 class="nome">OSEIAS NOGUEIRA</h1>
             <h2 class="cargo">Desenvolvedor Front-end Jr</h2>
         </div>
         <div class="conteudo">
