Alteração de imagens e disposição de texto [Sobre/Redes]

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <main class="cartao">
         <div class="minhas-informacoes">
             <img src="./src/imagens/foto.png" alt="Foto Perfil">
-            <h1 class="nome">OSEIAS NOGUEIRA</h1>
+            <h1 class="nome">OSÉIAS NOGUEIRA</h1>
             <h2 class="cargo">Desenvolvedor Front-end Jr</h2>
         </div>
         <div class="conteudo">
             <ul class="abas">
-                <li class="aba">
-                    <img src="./src/imagens/sobre2.gif" alt="ícone sobre">
+                <li class="aba selecionado">
+                    <img src="./src/imagens/sobre.gif" alt="ícone sobre">
                 </li>
                 <li class="aba">
-                    <img src="./src/imagens/redes2.gif" alt="ícone de redes sociais">
+                    <img src="./src/imagens/redes.gif" alt="ícone de redes sociais">
                 </li>
                 <li class="aba">
-                    <img src="./src/imagens/projetos2.webp" alt="ícone de redes sociais">
+                    <img src="./src/imagens/projetos.gif" alt="ícone de projetos">
                 </li>
 
             </ul>
@@ -38,9 +38,8 @@
                 <div class="informacao">
                     <h3 class="sub-titulo">Sobre</h3>
                     <div class="descricao">
-                        <p>Olá meu nome é Oséias e estou migrando para a área de Desenvolvimento Frontend.</p>
-                        <p>Busco me aperfeiçoar e atingir o topo da carreira. Acredito na tecnologia e seus benefícios para o mundo, quero fazer parte disso.</p> 
-                        
+                        <p>Olá meu nome é Oséias e estou migrando para a área de Desenvolvimento Frontend.</p><br>
+                        <p>Busco me aperfeiçoar e atingir o topo da carreira. Acredito na tecnologia e seus benefícios para o mundo, quero fazer parte disso.</p><br>
                         <p>Atualmente estou estudando <span>HTML, CSS e JavaScript.</span>.</p>
                     </div>
                 </div>
