Configuração da tela [Sobre] selecionada.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             </ul>
             <div class="informacoes-abas">
-                <div class="informacao">
+                <div class="informacao selecionado">
                     <h3 class="sub-titulo">Sobre</h3>
                     <div class="descricao">
                         <p>Olá meu nome é Oséias e estou migrando para a área de Desenvolvimento Frontend.</p><br>
