Alteração campo [Sobre]

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <h3 class="sub-titulo">Sobre</h3>
                     <div class="descricao">
                         <p>Olá meu nome é Oséias e estou migrando para a área de Desenvolvimento Frontend.</p><br>
-                        <p>Busco me aperfeiçoar e atingir o topo da carreira. Acredito na tecnologia e seus benefícios para o mundo, quero fazer parte disso.</p><br>
+                        <p>Busco me aperfeiçoar e atingir o topo da carreira. Acredito na tecnologia e seus benefícios para mudar o mundo e quero fazer parte dessa revolução.</p><br>
                         <p>Atualmente estou estudando <span>HTML, CSS e JavaScript.</span>.</p>
                     </div>
                 </div>
