--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
         </div>
         <div class="conteudo">
             <ul class="abas">
-                <li class="aba selecionado">
+                <li class="aba selecionado" id="sobre-mim">
                     <img src="./src/imagens/sobre.gif" alt="ícone sobre">
                 </li>
-                <li class="aba">
+                <li class="aba" id="minhas-redes">
                     <img src="./src/imagens/redes.gif" alt="ícone de redes sociais">
                 </li>
-                <li class="aba">
+                <li class="aba" id="meus-projetos">
                     <img src="./src/imagens/projetos.gif" alt="ícone de projetos">
                 </li>
 
             </ul>
             <div class="informacoes-abas">
-                <div class="informacao selecionado">
+                <div class="informacao selecionado" id="informacao-sobre-mim">
                     <h3 class="sub-titulo">Sobre</h3>
                     <div class="descricao">
                         <p>Olá meu nome é Oséias e estou migrando para a área de Desenvolvimento Frontend.</p><br>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
 
-                <div class="informacao">
+                <div class="informacao" id="informacao-minhas-redes">
                     <h3 class="sub-titulo">Minhas Redes</h3>
                     <ul class="redes-sociais">
                         <li>
@@ -59,7 +59,7 @@
                     </ul>
                 </div>
 
-                <div class="informacao">
+                <div class="informacao" id="informacao-meus-projetos">
                     <h3 class="sub-titulo">Projetos</h3>
                     <ul class="lista-projetos">
                         <li>
