Atualização caminho do currículo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h3 class="sub-titulo">Minhas Redes</h3>
                     <ul class="redes-sociais">
                         <li>
-                            <a href="https://drive.google.com/drive/folders/0B-8Jldo9yvpifnpQVGI5WU9iMDZhRDBfWXBsbl9lU0dTN1JjZl82NWl1LXBwZC1uMmVfUms?resourcekey=0-LS5aggtKaqHLyztkjfiiUQ" target="_blank" class="curriculo">Currículo</a>
+                            <a href="src/arquivos/Currículo Oséias Nogueira 2023.pdf" target="_blank" class="curriculo">Currículo</a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/oséias-nogueira-46a072a5/" target="_blank" class="linkedin">LinkdIn</a>
