Atualização aba Minhas Redes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital@1&display=swap" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/a31cf5ebe6.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="src/CSS/reset.css">
     <link rel="stylesheet" href="src/CSS/style.css">
 
@@ -48,13 +50,13 @@
                     <h3 class="sub-titulo">Minhas Redes</h3>
                     <ul class="redes-sociais">
                         <li>
-                            <a href="src/arquivos/Currículo Oséias Nogueira 2023.pdf" target="_blank" class="curriculo">Currículo</a>
+                            <a href="src/arquivos/Currículo Oséias Nogueira 2023.pdf" target="_blank" class="curriculo"><i class="fa-solid fa-file"></i> Currículo</a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/oséias-nogueira-46a072a5/" target="_blank" class="linkedin">LinkdIn</a>
+                            <a href="https://www.linkedin.com/in/oséias-nogueira-46a072a5/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i> LinkdIn</a>
                         </li>
                         <li>
-                            <a href="https://github.com/oseiasWeb" target="_blank" class="github">GitHub</a>
+                            <a href="https://github.com/oseiasWeb" target="_blank" class="github"><i class="fa-brands fa-github"></i> GitHub</a>
                         </li>
                     </ul>
                 </div>
@@ -63,10 +65,13 @@
                     <h3 class="sub-titulo">Projetos</h3>
                     <ul class="lista-projetos">
                         <li>
-                            <a href="https://oseiasweb.github.io/lista-de-tarefas/" target="_blank" class="projeto1">Projeto 1 - Lista de tarefas</a>
+                            <a href="https://oseiasweb.github.io/Landing-Page-Eletricista/" target="_blank">1 - Landing Page Eletricista</a>         
                         </li>
                         <li>
-                            <a href="https://oseiasweb.github.io/projeto-marvel/" target="_blank" class="projeto2">Projeto 2 - Seleção de Personagens</a>
+                            <a href="https://oseiasweb.github.io/lista-de-tarefas/" target="_blank" class="projeto2">2 - Lista de tarefas</a>
+                        </li>
+                        <li>
+                            <a href="https://oseiasweb.github.io/projeto-marvel/" target="_blank" class="projeto3">3 - Seleção de Personagens</a>
                         </li>
                     </ul>
                 </div>
