--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
                             <a href="https://oseiasweb.github.io/lista-de-tarefas/" target="_blank" class="projeto2">2 - Lista de tarefas</a>
                         </li>
                         <li>
-                            <a href="https://oseiasweb.github.io/projeto-marvel/" target="_blank" class="projeto3">3 - Seleção de Personagens</a>
+                            <a href="https://oseiasweb.github.io/Landing-Page-Fotografia/" target="_blank" class="projeto3">3 - Agência Fotográfica (Fase Beta)</a>
+                        </li>
+                        <li>
+                            <a href="https://oseiasweb.github.io/projeto-marvel/" target="_blank" class="projeto4">4 - Seleção de Personagens</a>
                         </li>
                     </ul>
                 </div>
