Alterações de abas e informações dos projetos

--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
                     <h3 class="sub-titulo">Projetos</h3>
                     <ul class="lista-projetos">
                         <li>
-                            <a href="https://oseiasweb.github.io/Landing-Page-Eletricista/" target="_blank">1 - Landing Page Eletricista</a>         
+                            <a href="https://oseiasweb.github.io/Landing-Page-Fotografia/" target="_blank">Agência Fotográfica 📸</a>         
                         </li>
                         <li>
-                            <a href="https://oseiasweb.github.io/lista-de-tarefas/" target="_blank" class="projeto2">2 - Lista de tarefas</a>
+                            <a href="https://oseiasweb.github.io/Landing-Page-Eletricista/" target="_blank" class="projeto2">Serviço Eletricista ⚡</a>
                         </li>
                         <li>
-                            <a href="https://oseiasweb.github.io/Landing-Page-Fotografia/" target="_blank" class="projeto3">3 - Agência Fotográfica (Fase Beta)</a>
+                            <a href="" target="_blank" class="projeto3">Landing Page - Filmes 2023 📽️</a>
                         </li>
                         <li>
-                            <a href="https://oseiasweb.github.io/projeto-marvel/" target="_blank" class="projeto4">4 - Seleção de Personagens</a>
+                            <a href="https://oseiasweb.github.io/projeto-marvel/" target="_blank" class="projeto4">Site de Notícias (Beta) 📰</a>
                         </li>
                     </ul>
                 </div>
