Alteração link página [Site Notícias]

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <a href="" target="_blank" class="projeto3">Landing Page - Filmes 2023 📽️</a>
                         </li>
                         <li>
-                            <a href="https://oseiasweb.github.io/projeto-marvel/" target="_blank" class="projeto4">Site de Notícias (Beta) 📰</a>
+                            <a href="https://oseiasweb.github.io/Site-Noticias/" target="_blank" class="projeto4">Site de Notícias (Beta) 📰</a>
                         </li>
                     </ul>
                 </div>
